tests/typing/bad/testfile-for-3.c

union S { int a; };
int main() { union S s; for( ; s; ); }

